[package]
name = "hctl"
version = "0.2.2"
edition = "2021"
authors = [ "Michał Szmidt" ]
repository = "https://github.com/michalszmidt/hctl"
license-file = "LICENSE"
keywords = ["pi-hole hostfile", "adguardhome", "hostlist", "adguard-home", "hostfiles", "dns-blocking", "dns-blocklists", "adguard-dns" ]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"                                                           # Apache 2.0 / MIT
regex = "*"                                                           # Apache 2.0 / MIT
itertools = "*"                                                       # Apache 2.0 / MIT
clap = { version="*", features = ["default"] }                        # Apache 2.0 / MIT
serde = { vesrion="*", features = ["derive"] }                        # Apache 2.0 / MIT  
serde_yaml = "*"                                                      # Apache 2.0 / MIT
minreq = { version="*", features = ["https-native"] }                 # MIT
indicatif = "*"                                                       # MIT
trust-dns-resolver = {version = "*", features = ["dns-over-rustls", "dnssec-openssl"]}  # Apache 2.0 / MIT
# trust-dns-resolver = {version = "*", features = ["dns-over-rustls"]}  # Apache 2.0 / MIT
# rustls = "*"
# webpki-roots = "*" 