[package]
name = "hctl"
version = "0.2.2"
edition = "2021"
authors = [ "Michał Szmidt" ]
repository = "https://github.com/michalszmidt/hctl"
license-file = "LICENSE"
keywords = ["pi-hole hostfile", "adguardhome", "hostlist", "adguard-home", "hostfiles", "dns-blocking", "dns-blocklists", "adguard-dns" ]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Workaround needed for Linux musl aarch64
# See:
#   - https://github.com/michalszmidt/hctl/issues/7
#   - https://github.com/rust-lang/rustup/issues/3324
[target.aarch64-unknown-linux-musl]
rustflags = ["-C", "link-arg=/root/.rustup/toolchains/stable-aarch64-unknown-linux-musl/lib/rustlib/aarch64-unknown-linux-musl/lib/self-contained/libc.a"]

[dependencies]
rayon = "*"                                                           # Apache 2.0 / MIT
regex = "*"                                                           # Apache 2.0 / MIT
itertools = "*"                                                       # Apache 2.0 / MIT
clap = { version="*", features = ["default"] }                        # Apache 2.0 / MIT
serde = { vesrion="*", features = ["derive"] }                        # Apache 2.0 / MIT  
serde_yaml = "*"                                                      # MIT
indicatif = "*"                                                       # Apache 2.0 / MIT
rand = "*"

minreq = { version="*", features = ["https-native"] }                 # MIT
trust-dns-resolver = {version = "*", features = ["dns-over-native-tls", "dnssec-openssl"]}  # Apache 2.0 / MIT
# minreq = { version="*", features = ["https-rustls"] }                 # MIT
# trust-dns-resolver = { version = "*", features = ["dns-over-rustls", "dnssec-ring"] }  # Apache 2.0 / MIT

# IF YOU DON'T WANT TO USE NATIVE-OPENSSL, YOU CAN BUILD THIS APP WITHOUT IT
# BY REPLACING LAST TWO LINES WITH COMMENTED ONES, THOSE WILL ENABLE RUSTLS AND RING
# NOTE THAT IT MAY BE LESS PERFORMANT THEN